added ahrefs to index

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-  
 <!DOCTYPE html>
 <html>
     <head>
@@ -12,12 +11,12 @@
     <body>
         <ul>
             <lh><b>Asignaturas DAW</b></lh>
-            <li>Base de Datos</li>
-            <li>Entornos de Desarrollo</li>
-            <li>Sitemas Informáticos</li>
-            <li>Programación</li>
-            <li>Lenguajes de marcas</li>
-            <li>FOL</li> 
+            <li><a href="bbdd.html">Base de Dades</a>/li>
+            <li><a href= "ed.html">Entorns de Desenvolupament</a>/li>
+            <li><a href="sistemes.html">Sistemes Informátics</a></li>
+            <li><a href= "programacio.html">Programació</a></li>
+            <li><a href= "marques.html">Lenguatges de Marques</a></li>
+            <li><a href="fol.html">FOL</a></li> 
         </ul>
     </body>
 </html>
