Fixing issue. Two list tags were not closed

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <body>
         <ul>
             <lh><b>Asignaturas DAW</b></lh>
-            <li><a href="bbdd.html">Base de Dades</a>/li>
-            <li><a href= "ed.html">Entorns de Desenvolupament</a>/li>
+            <li><a href="bbdd.html">Base de Dades</a></li>
+            <li><a href= "ed.html">Entorns de Desenvolupament</a></li>
             <li><a href="sistemes.html">Sistemes Informátics</a></li>
             <li><a href= "programacio.html">Programació</a></li>
             <li><a href= "marques.html">Lenguatges de Marques</a></li>
