Colored h1 of index

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
+
+        <h1 style="color: blue;">Asignatures de DAW</h1>
         <ul>
-            <lh><b>Asignaturas DAW</b></lh>
             <li><a href="bbdd.html">Base de Dades</a></li>
             <li><a href= "ed.html">Entorns de Desenvolupament</a></li>
             <li><a href="sistemes.html">Sistemes Informátics</a></li>
