--- a/sistemes.html
+++ b/sistemes.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <h1>Programació</h1>
+        <h1>Sistemes</h1>
         <p>Estudis i coneixements que té que veure amb l'infraestructura dels ordinadors i els seves conexions</p>
     </body>
 </html>
